# AIM-SET-2.0

./: .gitignore  01_PRD.md  02_Architecture.md  03_Agent_Specs.md  04_Tech_Stack.md  05_Project_Conventions.md  06_Frontend_Guidelines.md  07_Backend_Guidelines.md  08_Production_Checklist.md  09_AI_Coding_Rules.md  10_Storyline.md  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.api  Master_PRD_Sales_Enablement.md  README.md  biome.json  fullsphere-landing.html  package.json  pnpm-lock.yaml  railway.toml  turbo.json
services/api/: .env.example  Dockerfile  package.json  pyproject.toml  railway.json  railway.toml
services/api/app/: config.py  deps.py  main.py  schemas.py
services/api/app/agents/: briefing_agent.py  clp_agent.py  (+15 more)
services/api/scripts/: reingest_failed.py
services/api/tests/: conftest.py  test_bant_authority.py  test_bant_scorer.py  test_briefing_agent.py  test_clp_agent.py  test_content_gaps_service.py  test_content_generation_agent.py  test_content_studio_repository.py  test_daily_briefing_cache.py  test_dc_notes.py  test_discovery_checklist_agent.py  test_intent_detection.py  test_jira_service.py  test_kb_ingestion.py  test_kb_project_repository.py  test_live_call_dispatcher_regression.py  test_live_call_handler.py  test_live_call_repository.py  test_post_dc_agent.py  test_post_dc_import.py  test_post_dc_transcript_builder.py  test_pre_dc_agent.py  test_recall_integration.py  test_relevant_content.py  test_relevant_content_cache.py  test_sales_copilot_agent.py  test_salient_keywords.py  test_template_editor_service.py  test_tenant_resolve.py
(+695 files in other folders)
