[project]
name = "dc-copilot-api"
version = "0.2.0"
description = "FastAPI backend for DC Copilot"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "supabase>=2.4.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "openai>=1.0.0",
  "anthropic>=0.40.0",
  "pymupdf4llm>=0.0.17",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
llm = [
  "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["../../python-packages", "."]
testpaths = ["tests"]
